<resources>
    <string name="app_name">Gerenciador de Leituas</string>
    <string name="book_register_page_title">Cadastro de Livros</string>
    <string name="book_title_label">Título:</string>
    <string name="book_isbn_code_label">ISBN: </string>
    <string name="book_author_label">Autor:</string>
    <string name="book_publisher_company_label">Editora:</string>
    <string name="book_reading_status">Estado de leitura do livro:</string>
    <string name="book_pages_amount">Quantidade de páginas:</string>
    <string name="book_literary_genre">Gênero literário:</string>
    <string name="book_reading_status_reading">Lendo</string>
    <string name="book_reading_status_read">Lido</string>
    <string name="book_reading_status_to_read">Para ler</string>
    <string name="book_reading_status_stopped">Parei de ler</string>
    <string name="book_checkbox_action">Ação</string>
    <string name="book_checkbox_sitcom">Comédia</string>
    <string name="checkbox_other">Outros</string>
    <string name="book_checkbox_romance">Romance</string>
    <string name="book_checkbox_thriller">Suspense</string>
    <string name="submit_button">Enviar dados</string>
    <string name="clear_all_data_button">Limpar dados</string>
    <string name="book_tags_label">Etiqueta:</string>
    <string name="book_list_page_title">Meus livros</string>
    <string name="app_authorship_page_title">Autoria do Aplicativo</string>
    <string name="app_author_name_label">Nome da aluna:</string>
    <string name="author_course_label">Curso:</string>
    <string name="author_email_label">E-mail:</string>
    <string name="app_author_name">Aline Toneti Gonçalves</string>
    <string name="author_course">Curso de Especialização em Tecnologia Java</string>
    <string name="author_email">toneti.aline@gmail.com</string>
    <string name="app_description_label">Descrição do Aplicativo</string>
    <string name="app_description">O Sistema de gerenciamento de leituras tem como objetivo principal auxiliar pessoas que leem muito.
        Tanto por prazer, como para desenvolvimento pessoal e profissional, a organizarem suas leituras.
        Ou seja, pessoas que leem vários livros ou compram muitos livros ao mesmo tempo e precisam organizar a ordem de leitura.
        Também será um espaço para classificar os livros (dar uma nota) e guardar anotações sobre os livros lidos para referências futuras.
</string>
    <string name="utfpr_image_description">Logo da UTFPR - Campus Cornélio Procópio</string>
    <string name="new_book_button">Novo</string>
    <string name="about_app_authorship_button">Sobre</string>
    <string name="get_back_button">Voltar</string>
    <string name="add_menu_item">Adicionar</string>
    <string name="about_menu_item">Sobre</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="clear_fields">Limpar</string>

    <string-array name="tags">
        <item>Sem etiqueta selecionada</item>
        <item>Para rir</item>
        <item>Para chorar</item>
        <item>Para se apaixonar</item>
        <item>Para se assustar</item>
        <item>Para se distrair</item>
        <item>Para se inspirar</item>
        <item>Para estudar</item>
        <item>Para melhorar habilidades comportamentais</item>
        <item>Para melhorar habilidades técnicas</item>
        <item>Para aprimorar inteligência emocional</item>
        <item>Para melhorar comunicação oral</item>
        <item>Para melhorar comunicação escrita</item>
        <item>Para melhorar gerenciamento de finanças</item>
        <item>Para melhorar gerenciamento de tempo</item>
        <item>Para investir</item>
    </string-array>

    <string name="new_book">Novo Livro</string>
    <string name="edited_book">Editar Livro</string>
    <string name="cancel_edition">Cancelar</string>
</resources>