<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollViewForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPageTitle"
                android:layout_width="124dp"
                android:layout_height="22dp"
                android:layout_marginStart="146dp"
                android:layout_marginLeft="146dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="147dp"
                android:layout_marginRight="147dp"
                android:background="#FFFFFF"
                android:text="@string/book_register_page_title"
                android:textColor="@color/purple_700" />

            <TextView
                android:id="@+id/textViewBookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:labelFor="@id/editTextBookTitle"
                android:text="@string/book_title_label" />

            <EditText
                android:id="@+id/editTextBookTitle"
                android:layout_width="316dp"
                android:layout_height="45dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewBookIsbnCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/editTextIsbnCode"
                android:text="@string/book_isbn_code_label" />

            <EditText
                android:id="@+id/editTextIsbnCode"
                android:layout_width="314dp"
                android:layout_height="42dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textViewBookAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/editTextTextBookAuthor"
                android:text="@string/book_author_label" />

            <EditText
                android:id="@+id/editTextTextBookAuthor"
                android:layout_width="315dp"
                android:layout_height="42dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewPublisherCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/editTextTextPublisherCompany"
                android:text="@string/book_publisher_company_label" />

            <EditText
                android:id="@+id/editTextTextPublisherCompany"
                android:layout_width="315dp"
                android:layout_height="43dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewPagesAmount"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/editTextPagesAmount"
                android:text="@string/book_pages_amount" />

            <EditText
                android:id="@+id/editTextPagesAmount"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textViewLiteraryGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_literary_genre" />

            <CheckBox
                android:id="@+id/checkBoxAction"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:clickable="true"
                android:onClick="onCheckboxClicked"
                android:text="@string/book_checkbox_action" />

            <CheckBox
                android:id="@+id/checkBoxRomance"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="0dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/book_checkbox_romance" />

            <CheckBox
                android:id="@+id/checkBoxSitcom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="0dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/book_checkbox_sitcom" />

            <CheckBox
                android:id="@+id/checkBoxThriller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="0dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/book_checkbox_thriller" />

            <CheckBox
                android:id="@+id/checkBoxOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="0dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/checkbox_other" />

            <TextView
                android:id="@+id/textViewBookReadingStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/radioGroupStatusBookReading"
                android:text="@string/book_reading_status" />

            <RadioGroup
                android:id="@+id/radioGroupStatusBookReading"
                android:layout_width="314dp"
                android:layout_height="190dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radioButtonToRead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/book_reading_status_to_read" />

                <RadioButton
                    android:id="@+id/radioButtonReading"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/book_reading_status_reading" />

                <RadioButton
                    android:id="@+id/radioButtonStopped"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/book_reading_status_stopped" />

                <RadioButton
                    android:id="@+id/radioButtonRead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/book_reading_status_read" />

            </RadioGroup>

            <TextView
                android:id="@+id/textViewTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_tags_label" />

            <Spinner
                android:id="@+id/spinnerTags"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/buttonCleanBookData"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:onClick="clearBookData"
                android:text="@string/clear_all_data_button" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:onClick="submit"
                android:text="@string/submit_button" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>